exports[`StringCompletionWidget should render 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Typeahead
    autoFocus={false}
    focusedItemIndex={null}
    focusedSectionIndex={null}
    id={42}
    items={null}
    multiSection={true}
    noResultText="No result."
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onSelect={[Function]}
    position="left"
    searching={false}
    searchingText="Searching for matches…"
    value="" />,
  "nodes": Array [
    <Typeahead
      autoFocus={false}
      focusedItemIndex={null}
      focusedSectionIndex={null}
      id={42}
      items={null}
      multiSection={true}
      noResultText="No result."
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onSelect={[Function]}
      position="left"
      searching={false}
      searchingText="Searching for matches…"
      value="" />,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <StringCompletionWidget
        fetchItems={[Function]}
        options={
                Object {
                        "itemsSrc": "/test.json",
                      }
        } />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StringCompletionWidget {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handleBlur": [Function],
        "handleFocus": [Function],
        "handleKeyDown": [Function],
        "handleMouseEnter": [Function],
        "handleMouseLeave": [Function],
        "handleSelect": [Function],
        "props": Object {
          "fetchItems": [Function],
          "options": Object {
            "itemsSrc": "/test.json",
          },
        },
        "refs": Object {},
        "state": Object {
          "highlightedItemIndex": null,
          "highlightedSectionIndex": null,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Typeahead
          autoFocus={false}
          focusedItemIndex={null}
          focusedSectionIndex={null}
          id={42}
          items={null}
          multiSection={true}
          noResultText="No result."
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onSelect={[Function]}
          position="left"
          searching={false}
          searchingText="Searching for matches…"
          value="" />,
        "_debugID": 2,
        "_renderedOutput": <Typeahead
          autoFocus={false}
          focusedItemIndex={null}
          focusedSectionIndex={null}
          id={42}
          items={null}
          multiSection={true}
          noResultText="No result."
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onSelect={[Function]}
          position="left"
          searching={false}
          searchingText="Searching for matches…"
          value="" />,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <StringCompletionWidget
    fetchItems={[Function]}
    options={
        Object {
            "itemsSrc": "/test.json",
          }
    } />,
}
`;

exports[`StringCompletionWidget should render without items 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Typeahead
    autoFocus={false}
    focusedItemIndex={null}
    focusedSectionIndex={null}
    id={42}
    items={null}
    multiSection={true}
    noResultText="No result."
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onSelect={[Function]}
    position="left"
    searching={false}
    searchingText="Searching for matches…"
    value="" />,
  "nodes": Array [
    <Typeahead
      autoFocus={false}
      focusedItemIndex={null}
      focusedSectionIndex={null}
      id={42}
      items={null}
      multiSection={true}
      noResultText="No result."
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onSelect={[Function]}
      position="left"
      searching={false}
      searchingText="Searching for matches…"
      value="" />,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <StringCompletionWidget
        fetchItems={[Function]}
        options={Object {}} />,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StringCompletionWidget {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "handleBlur": [Function],
        "handleFocus": [Function],
        "handleKeyDown": [Function],
        "handleMouseEnter": [Function],
        "handleMouseLeave": [Function],
        "handleSelect": [Function],
        "props": Object {
          "fetchItems": [Function],
          "options": Object {},
        },
        "refs": Object {},
        "state": Object {
          "highlightedItemIndex": null,
          "highlightedSectionIndex": null,
        },
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Typeahead
          autoFocus={false}
          focusedItemIndex={null}
          focusedSectionIndex={null}
          id={42}
          items={null}
          multiSection={true}
          noResultText="No result."
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onSelect={[Function]}
          position="left"
          searching={false}
          searchingText="Searching for matches…"
          value="" />,
        "_debugID": 4,
        "_renderedOutput": <Typeahead
          autoFocus={false}
          focusedItemIndex={null}
          focusedSectionIndex={null}
          id={42}
          items={null}
          multiSection={true}
          noResultText="No result."
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onSelect={[Function]}
          position="left"
          searching={false}
          searchingText="Searching for matches…"
          value="" />,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <StringCompletionWidget
    fetchItems={[Function]}
    options={Object {}} />,
}
`;
